src/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-secret-display
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-secret-display
  template:
    metadata:
      labels:
        app: nginx-secret-display
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            cpu: "100m"   
            memory: "100Mi"  
          limits:
            cpu: "200m"   
            memory: "200Mi"
        command: ["/bin/sh", "/config/start.sh"]
        volumeMounts:
        - name: config-volume
          mountPath: /config
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
      - name: nginx-conf
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: html
        emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-secret-display
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
